@@ -1,3 +1,4 @@
+#!/bin/sh
 # Copyright (c) 2009, Purdue University
 # All rights reserved.
 # 
@@ -26,3 +27,43 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
+start_roster()
+{
+  echo "Starting Roster Server..."
+  rosterd &
+}
+stop_roster()
+{
+  if [ -e /var/lock/roster ]
+  then
+    if [ -w /var/lock/roster ]
+    then
+      echo "Stopping Roster Server..."
+      rm /var/lock/roster
+    else
+      echo "Could not stop Roster Server. Do you have correct permissions?"
+      exit 1
+    fi
+  else
+    echo "Could not find lock file. Is Roster Server running?"
+    exit 1
+  fi
+}
+
+case "$1" in
+  start)
+    start_roster
+    ;;
+  stop)
+    stop_roster
+    ;;
+  restart)
+    stop_roster
+    sleep 2
+    start_roster
+    ;;
+  *)
+   echo "Usage $1 {start|stop|restart}"
+   exit 1
+   ;;
+esac
